@@ -1,3 +1,9 @@
+2007-09-10  Brian Pepple  <bpepple@fedoraproject.org>
+
+	* src/Makefile.am:
+	* src/twitux-avatar.[ch]: add functions to roundify
+	user's avatar if it's opaque.
+
 2007-09-09  Brian Pepple  <bpepple@fedoraproject.org>
 
 	* configure.in:
